Updating the project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,9 +47,9 @@
         android:padding="8dp"
         android:scrollbars="vertical"
         android:text=""
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textColor="@color/indigo"
-        android:textSize="20sp"
+        android:textSize="56sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
